<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.expedia.account.singlepage.SinglePageInputTextPresenter
            android:id="@+id/single_page_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/acct__First_Name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textNoSuggestions|textCapWords"
            app:acct__eit_errorStringPassword="@string/acct__enter_a_first_name"
            app:acct__eit_errorContDesc="@string/acct__enter_a_first_name" />

        <com.expedia.account.singlepage.SinglePageInputTextPresenter
            android:id="@+id/single_page_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/acct__Last_Name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textNoSuggestions|textCapWords"
            app:acct__eit_errorStringPassword="@string/acct__enter_a_last_name"
            app:acct__eit_errorContDesc="@string/acct__enter_a_last_name" />

    </LinearLayout>

    <com.expedia.account.singlepage.SinglePageInputTextPresenter
        android:id="@+id/single_page_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/acct__Email_Address"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        app:acct__eit_errorString="@string/acct__Must_enter_valid_email"
        app:acct__eit_errorContDesc="@string/acct__Must_enter_valid_email" />

    <com.expedia.account.singlepage.SinglePageInputTextPresenter
        android:id="@+id/single_page_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/acct__Create_Password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        app:acct__eit_errorStringPassword="@string/acct__Password_length_error_message"
        app:acct__eit_errorContDesc="@string/acct__Password_length_error_message" />

</merge>