<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/acct__white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="20dp"
            android:focusableInTouchMode="true">

            <Button
                android:id="@+id/new_signin_with_facebook_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/acct__new_account_btn_padding"
                android:backgroundTint="@color/acct__btn_facebook_normal"
                android:textColor="@color/acct__btn_facebook_text"
                android:text="@string/acct__Sign_In_with_Facebook"
                android:textSize="14sp"
                android:textAllCaps="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:text="@string/acct__or"
                android:textColor="@color/acct__black"
                android:textSize="14sp"
                android:focusable="true"/>

            <com.expedia.account.singlepage.SinglePageInputTextPresenter
                android:id="@+id/new_signin_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/acct__Email_Address"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:layout_marginBottom="20dp"
                app:acct__eit_errorString="@string/acct__Must_enter_valid_email"
                app:acct__eit_errorContDesc="@string/acct__Must_enter_valid_email" />

            <com.expedia.account.singlepage.SinglePageInputTextPresenter
                android:id="@+id/new_signin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/acct__Password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                app:acct__eit_errorStringPassword="@string/acct__Password_length_error_message"
                app:acct__eit_errorContDesc="@string/acct__Password_length_error_message" />

            <TextView
                android:id="@+id/new_signin_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:text="@string/acct__Forgot_your_password"
                android:textColor="@color/acct__blue_1"/>

            <Button
                android:id="@+id/new_signin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/acct__new_account_btn_padding"
                android:backgroundTint="@color/acct__new_account_btn_bg_color"
                android:textColor="@color/acct__btn_facebook_text"
                android:text="@string/acct__Sign_In"
                android:textSize="14sp"
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>
</merge>
